# lab09

./: .travis.yml  .travis.yml.swp  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  Dockerfile  input.txt
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  check  cmake_install.cmake  install_manifest.txt
_builds/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  check  cmake_install.cmake
_builds/default/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
_logs/polly/default/: log.txt
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_ex_lib/_build/formatter/: Makefile
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
hello_world_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  hello_world
hello_world_application/_build/formatter_ex/: Makefile  cmake_install.cmake
hello_world_application/_build/formatter_ex/formatter/: Makefile  cmake_install.cmake
logs/: log.txt
solver_application/: CMakeLists.txt
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  solver
solver_application/_build/formatter_ex/: Makefile  cmake_install.cmake
solver_application/_build/formatter_ex/formatter/: Makefile
solver_application/_build/solver_lib/: Makefile  cmake_install.cmake
solver_lib/: CMakeLists.txt  solver.cpp
tests/: test1.cpp
(+14 files in other folders)
